--- a/Admin/src/app/pages/contacts/profile/profile.component.html
+++ b/Admin/src/app/pages/contacts/profile/profile.component.html
@@ -1,7 +1,5 @@
 <div class="container-fluid">
-
   <app-page-title title="Profile" [breadcrumbItems]="breadCrumbItems"></app-page-title>
-
   <div class="row">
     <div class="col-xl-4">
       <div class="card overflow-hidden">
@@ -9,8 +7,8 @@
           <div class="row">
             <div class="col-7">
               <div class="text-primary p-3">
-                <h5 class="text-primary">Welcome Back !</h5>
-                <p>It will seem like simplified</p>
+                <h5 class="text-primary">Bienvenue{{ user?.firstname ? ' ' + user.firstname : '' }} !</h5>
+                <p>Heureux de vous revoir sur la plateforme.</p>
               </div>
             </div>
             <div class="col-5 align-self-end">
@@ -20,221 +18,108 @@
         </div>
         <div class="card-body pt-0">
           <div class="row">
-            <div class="col-sm-4">
-              <div class="avatar-md profile-user-wid mb-4">
-                <img src="assets/images/users/avatar-1.jpg" alt="" class="img-thumbnail rounded-circle">
+            <div class="col-sm-12 text-center">
+              <div class="avatar-md profile-user-wid mb-3 mx-auto">
+                <img src="assets/images/users/avatar-1.jpg" alt="Avatar" class="img-thumbnail rounded-circle">
               </div>
-              <h5 class="font-size-15 text-truncate">Cynthia Price</h5>
-              <p class="text-muted mb-0 text-truncate">UI/UX Designer</p>
-            </div>
-
-            <div class="col-sm-8">
-              <div class="pt-4">
-
-                <div class="row">
-                  <div class="col-6">
-                    <h5 class="font-size-15">125</h5>
-                    <p class="text-muted mb-0">Projects</p>
-                  </div>
-                  <div class="col-6">
-                    <h5 class="font-size-15">$1245</h5>
-                    <p class="text-muted mb-0">Revenue</p>
-                  </div>
-                </div>
-                <div class="mt-4">
-                  <a href="javascript: void(0);" class="btn btn-primary btn-sm">View Profile <i
-                      class="mdi mdi-arrow-right ms-1"></i></a>
-                </div>
-              </div>
+              <h5 class="font-size-16 text-truncate mb-0">{{ user?.firstname }} {{ user?.lastname }}</h5>
+              <p class="text-muted mb-2">{{ user?.email }}</p>
+              <button *ngIf="!editMode" class="btn btn-outline-primary btn-sm mt-2" (click)="enableEdit()">
+                <i class="bx bx-edit"></i> Editer mon profil
+              </button>
             </div>
           </div>
         </div>
       </div>
-      <!-- end card -->
-
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title mb-4">Personal Information</h4>
-
-          <p class="text-muted mb-4">Hi I'm Cynthia Price,has been the industry's standard dummy text To an English
-            person, it will seem like simplified English, as a skeptical Cambridge.</p>
-          <div class="table-responsive">
-            <table class="table table-nowrap mb-0">
-              <tbody>
-                <tr>
-                  <th scope="row">Full Name :</th>
-                  <td>Cynthia Price</td>
-                </tr>
-                <tr>
-                  <th scope="row">Mobile :</th>
-                  <td>(123) 123 1234</td>
-                </tr>
-                <tr>
-                  <th scope="row">E-mail :</th>
-                  <td>cynthiaskote@gmail.com</td>
-                </tr>
-                <tr>
-                  <th scope="row">Location :</th>
-                  <td>California, United States</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <!-- end card -->
-
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title mb-5">Experience</h4>
-          <div class="">
-            <ul class="verti-timeline list-unstyled">
-              <li class="event-list active">
-                <div class="event-timeline-dot">
-                  <i class="bx bx-right-arrow-circle bx-fade-right"></i>
-                </div>
-                <div class="d-flex">
-                  <div class="flex-shrink-0 me-3">
-                    <i class="bx bx-server h4 text-primary"></i>
-                  </div>
-                  <div class="flex-grow-1">
-                    <div>
-                      <h5 class="font-size-15"><a href="javascript: void(0);" class="text-dark">Back end Developer</a></h5>
-                      <span class="text-primary">2016 - 19</span>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="event-list">
-                <div class="event-timeline-dot">
-                  <i class="bx bx-right-arrow-circle"></i>
-                </div>
-                <div class="d-flex">
-                  <div class="flex-shrink-0 me-3">
-                    <i class="bx bx-code h4 text-primary"></i>
-                  </div>
-                  <div class="flex-grow-1">
-                    <div>
-                      <h5 class="font-size-15"><a href="javascript: void(0);" class="text-dark">Front end Developer</a></h5>
-                      <span class="text-primary">2013 - 16</span>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="event-list">
-                <div class="event-timeline-dot">
-                  <i class="bx bx-right-arrow-circle"></i>
-                </div>
-                <div class="d-flex">
-                  <div class="flex-shrink-0 me-3">
-                    <i class="bx bx-edit h4 text-primary"></i>
-                  </div>
-                  <div class="flex-grow-1">
-                    <div>
-                      <h5 class="font-size-15"><a href="javascript: void(0);" class="text-dark">UI /UX Designer</a></h5>
-                      <span class="text-primary">2011 - 13</span>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-      <!-- end card -->
     </div>
-
     <div class="col-xl-8">
-
-      <div class="row">
-        <div *ngFor="let stat of statData" class="col-md-4">
-          <app-stat [title]="stat.title" [value]="stat.value" [icon]="stat.icon"></app-stat>
-        </div>
-
-      </div>
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title mb-4">Revenue</h4>
-          <apx-chart dir="ltr" class="apex-charts" [series]="revenueBarChart.series" [chart]="revenueBarChart.chart"
-            [xaxis]="revenueBarChart.xaxis" [colors]="revenueBarChart.colors" [yaxis]="revenueBarChart.yaxis"
-            [dataLabels]="revenueBarChart.dataLabels" [stroke]="revenueBarChart.stroke"
-            [plotOptions]="revenueBarChart.plotOptions" [fill]="revenueBarChart.fill">
-          </apx-chart>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title mb-4">My Projects</h4>
-          <div class="table-responsive">
-            <table class="table table-nowrap table-hover mb-0">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Projects</th>
-                  <th scope="col">Start Date</th>
-                  <th scope="col">Deadline</th>
-                  <th scope="col">Budget</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Skote admin UI</td>
-                  <td>2 Sep, 2019</td>
-                  <td>20 Oct, 2019</td>
-                  <td>$506</td>
-                </tr>
-
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Skote admin Logo</td>
-                  <td>1 Sep, 2019</td>
-                  <td>2 Sep, 2019</td>
-                  <td>$94</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Redesign - Landing page</td>
-                  <td>21 Sep, 2019</td>
-                  <td>29 Sep, 2019</td>
-                  <td>$156</td>
-                </tr>
-                <tr>
-                  <th scope="row">4</th>
-                  <td>App Landing UI</td>
-                  <td>29 Sep, 2019</td>
-                  <td>04 Oct, 2019</td>
-                  <td>$122</td>
-                </tr>
-                <tr>
-                  <th scope="row">5</th>
-                  <td>Blog Template</td>
-                  <td>05 Oct, 2019</td>
-                  <td>16 Oct, 2019</td>
-                  <td>$164</td>
-                </tr>
-                <tr>
-                  <th scope="row">6</th>
-                  <td>Redesign - Multipurpose Landing</td>
-                  <td>17 Oct, 2019</td>
-                  <td>05 Nov, 2019</td>
-                  <td>$192</td>
-                </tr>
-                <tr>
-                  <th scope="row">7</th>
-                  <td>Logo Branding</td>
-                  <td>04 Nov, 2019</td>
-                  <td>05 Nov, 2019</td>
-                  <td>$94</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+          <h4 class="card-title mb-4">Informations personnelles</h4>
+          <ng-container *ngIf="user && profileForm; else loading">
+            <form *ngIf="editMode" [formGroup]="profileForm" (ngSubmit)="saveProfile()">
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Prénom</label>
+                  <input class="form-control" formControlName="firstname" placeholder="Prénom">
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Nom</label>
+                  <input class="form-control" formControlName="lastname" placeholder="Nom">
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Téléphone</label>
+                  <input class="form-control" formControlName="phoneNumber" placeholder="Téléphone">
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Date de naissance</label>
+                  <input class="form-control" type="date" formControlName="dateOfBirth">
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Sexe</label>
+                  <select class="form-select" formControlName="sex">
+                    <option value="M">Homme</option>
+                    <option value="F">Femme</option>
+                  </select>
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Email</label>
+                  <input class="form-control" formControlName="email" disabled>
+                </div>
+                <div class="col-md-6">
+                  <label class="form-label">Numéro CNI</label>
+                  <input class="form-control" formControlName="nationalIdNumber" disabled>
+                </div>
+              </div>
+              <div class="mt-4">
+                <button class="btn btn-success me-2" type="submit" [disabled]="profileForm.invalid">
+                  <i class="bx bx-save"></i> Enregistrer
+                </button>
+                <button class="btn btn-secondary" type="button" (click)="cancelEdit()">
+                  <i class="bx bx-x"></i> Annuler
+                </button>
+              </div>
+            </form>
+            <div *ngIf="!editMode">
+              <table class="table table-borderless mb-0">
+                <tbody>
+                  <tr>
+                    <th scope="row">Nom complet :</th>
+                    <td>{{ user.firstname }} {{ user.lastname }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Téléphone :</th>
+                    <td>{{ user.phoneNumber }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">E-mail :</th>
+                    <td>{{ user.email }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Date de naissance :</th>
+                    <td>{{ user.dateOfBirth | date:'longDate' }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Sexe :</th>
+                    <td>{{ user.sex === 'M' ? 'Homme' : (user.sex === 'F' ? 'Femme' : user.sex) }}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Numéro CNI :</th>
+                    <td>{{ user.nationalIdNumber }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </ng-container>
+          <ng-template #loading>
+            <div class="text-center py-5">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Chargement...</span>
+              </div>
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
   </div>
-  <!-- end row -->
 </div>
