--- a/Admin/src/app/pages/staff/payment-gateways/payment-gateways.component.html
+++ b/Admin/src/app/pages/staff/payment-gateways/payment-gateways.component.html
@@ -84,9 +84,9 @@
   <!-- Barre d'outils -->
   <div class="row mb-3">
     <div class="col-md-6">
-      <button class="btn btn-primary waves-effect waves-light me-2" (click)="openCreateModal()">
+      <!-- <button class="btn btn-primary waves-effect waves-light me-2" (click)="openCreateModal()">
         <i class="bx bx-plus me-1"></i> Créer un paiement
-      </button>
+      </button> -->
       <button class="btn btn-success waves-effect waves-light me-2" (click)="refreshData()" [disabled]="processing">
         <i class="bx bx-refresh me-1"></i> Actualiser
       </button>
