--- a/Admin/src/app/pages/staff/promoter/promoter.component.html
+++ b/Admin/src/app/pages/staff/promoter/promoter.component.html
@@ -81,14 +81,14 @@
 
           <!-- Statistiques -->
           <div class="row mb-3">
-            <div *ngFor="let stat of stats" class="col-md-4">
-              <div class="card text-center border-0 shadow-sm bg-light">
-                <div class="card-body p-3">
-                  <i class="{{stat.icon}}" style="font-size: 2rem; color: #6c757d;"></i>
-                  <h5 class="mb-0 mt-2">{{ stat.value }}</h5>
-                  <small class="text-muted">{{ stat.title }}</small>
-                </div>
-              </div>
+            <div class="col-md-4 col-6 mb-3">
+              <app-stat title="Total Promoteurs" [value]="stats[0]?.value || 0" icon="bx-user"></app-stat>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+              <app-stat title="Actifs" [value]="stats[1]?.value || 0" icon="bx-check-circle"></app-stat>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+              <app-stat title="Inactifs" [value]="stats[2]?.value || 0" icon="bx-block"></app-stat>
             </div>
           </div>
 
